# bot-neutro

./: .gitignore  LICENSE  README.md  cls  propuesta.patch  pyproject.toml  repomix-output.xml  ta.patch
docs/: 02_ESTADO_Y_NORTE.md  BOOTSTRAP_SKB_HILO.md  CLIENTE_OFICIAL_MUNAY_TECNICO_V1.md  CONTRATO_API_PUBLICA_V1.md  CONTRATO_CLIENTE_OFICIAL_MUNAY_V1.md  CONTRATO_INFRAESTRUCTURA_GITHUB.md  CONTRATO_NEUTRO_API.md  CONTRATO_NEUTRO_AUDIO.md  CONTRATO_NEUTRO_AUDIO_PIPELINE.md  CONTRATO_NEUTRO_AUDIO_STATS_V1.md  CONTRATO_NEUTRO_AUDIO_STORAGE_ESCALABILIDAD.md  CONTRATO_NEUTRO_CONTRIBUCION.md  CONTRATO_NEUTRO_EVENTOS.md  CONTRATO_NEUTRO_HEADERS.md  CONTRATO_NEUTRO_LLM.md  CONTRATO_NEUTRO_LLM_TIERS_COSTOS_V1.md  CONTRATO_NEUTRO_OBSERVABILIDAD.md  CONTRATO_NEUTRO_POLITICA_PRIVACIDAD_SESIONES.md  CONTRATO_NEUTRO_RATE_LIMIT.md  CONTRATO_NEUTRO_SESIONES_STORAGE_V1.md  CONTRATO_NEUTRO_STORAGE_SESIONES_AUDIO.md  CONTRATO_SKB_GOBERNANZA.md  HISTORIAL_PR.md  LEGACY_SENSEI_MAP.md  MATRIZ_CUMPLIMIENTO_CONTRATOS.md  MUNAY_CONTRATO_MODULO_AUDIO.md  MUNAY_CONTRATO_PROGRESO_USUARIO.md  MUNAY_GOB_GLOBAL.md  NEUTRO_MIGRATION_PLAN.md  NEUTRO_OVERVIEW.md  NEUTRO_SLO_AUDIO_OPERACIONAL.md  NEUTRO_STARTER_KIT.md  ORDEN_KAIZEN_L1_AUDITORIA_20251217.md  PLANTILLA_ORDEN_EJECUCION_KAIZEN.md  ROADMAP_CAPA_SUPERIOR_V1.md  RUNBOOK_AZURE_SPEECH.md  RUNBOOK_LLM.md  UX_CLIENTE_OFICIAL_MUNAY_V1.md  prometheus_rules_slo_audio.yml
httpx/: __init__.py
httpx_local/: __init__.py  _client.py  _types.py
scripts/: bootstrap_codex.ps1  kaizen_validate_order.py
tests/: test_api_hardening.py  (+15 more)
(+54 files in other folders)
