[project]
name = "bot-neutro"
version = "0.1.0"
description = "Minimal contract-first FastAPI core for bot-neutro"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.23.0",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "httpx>=0.27",
    "pytest-cov",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "azure_integration: optional Azure Speech integration tests",
]
